{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 167,
  "lineage": "7284467d-1083-1045-93d4-ac4380e3c8f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c56e3057315ddd25",
            "arn": "arn:aws:ec2:us-east-1:992382822158:elastic-ip/eipalloc-0c56e3057315ddd25",
            "association_id": "eipassoc-03fb153cd570895f5",
            "domain": "vpc",
            "id": "eipalloc-0c56e3057315ddd25",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d1a0a5a9ea34e79e",
            "private_dns": "ip-10-0-0-12.ec2.internal",
            "private_ip": "10.0.0.12",
            "public_dns": "ec2-54-163-1-228.compute-1.amazonaws.com",
            "public_ip": "54.163.1.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mukesh-eip"
            },
            "tags_all": {
              "Name": "mukesh-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:992382822158:instance/i-0ae9815c2afb4d89b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae9815c2afb4d89b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ba35ffb3aa508f7",
            "private_dns": "ip-10-0-0-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.22",
            "public_ip": "18.212.131.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c06bf42d4f1d5c31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0ea80f10186b0a2",
            "tags": {
              "Name": "mukesh-private-ec2"
            },
            "tags_all": {
              "Name": "mukesh-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04feabaf7c8759950"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_test",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:992382822158:instance/i-099d90ae30725f7ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099d90ae30725f7ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d2e2482129f32498",
            "private_dns": "ip-10-0-0-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_ip": "54.152.207.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd82f21e187cfe5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc889472f90712d8",
            "tags": {
              "Name": "mukesh-public-ec2"
            },
            "tags_all": {
              "Name": "mukesh-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04feabaf7c8759950"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_test",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:internet-gateway/igw-0ad0ed603cb6a1fba",
            "id": "igw-0ad0ed603cb6a1fba",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-igw"
            },
            "tags_all": {
              "Name": "mukesh-igw"
            },
            "vpc_id": "vpc-0497b2d494eac96de"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c56e3057315ddd25",
            "association_id": "eipassoc-03fb153cd570895f5",
            "connectivity_type": "public",
            "id": "nat-0a1b40f84fa75df86",
            "network_interface_id": "eni-0d1a0a5a9ea34e79e",
            "private_ip": "10.0.0.12",
            "public_ip": "54.163.1.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bc889472f90712d8",
            "tags": {
              "Name": "mukesh-nat-gateway"
            },
            "tags_all": {
              "Name": "mukesh-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.test_eip",
            "aws_internet_gateway.test_igw",
            "aws_subnet.public_subnet_test",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-0dee1f8cdf567e886",
            "id": "rtb-0dee1f8cdf567e886",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a1b40f84fa75df86",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-private-rt"
            },
            "tags_all": {
              "Name": "mukesh-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0497b2d494eac96de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_nat_gateway",
            "aws_subnet.public_subnet_test",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-0435ddcdd2ff4bcff",
            "id": "rtb-0435ddcdd2ff4bcff",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad0ed603cb6a1fba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-public-rt"
            },
            "tags_all": {
              "Name": "mukesh-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0497b2d494eac96de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7213d4b627d22d5",
            "route_table_id": "rtb-0dee1f8cdf567e886",
            "subnet_id": "subnet-0d0ea80f10186b0a2"
          },
          "dependencies": [
            "aws_eip.test_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_test",
            "aws_subnet.public_subnet_test",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0c18aebdb8ff0b",
            "route_table_id": "rtb-0435ddcdd2ff4bcff",
            "subnet_id": "subnet-0bc889472f90712d8"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_test",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:security-group/sg-04feabaf7c8759950",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04feabaf7c8759950",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240726125653187500000001",
            "name_prefix": "terraform-",
            "owner_id": "992382822158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mukesh-ec2-instance-sg"
            },
            "tags_all": {
              "Name": "mukesh-ec2-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0497b2d494eac96de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-0d0ea80f10186b0a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0ea80f10186b0a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-private-subnet"
            },
            "tags_all": {
              "Name": "mukesh-private-subnet"
            },
            "vpc_id": "vpc-0497b2d494eac96de"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-0bc889472f90712d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc889472f90712d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-public-subnet"
            },
            "tags_all": {
              "Name": "mukesh-public-subnet"
            },
            "vpc_id": "vpc-0497b2d494eac96de"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:vpc/vpc-0497b2d494eac96de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-0b2b1f71653ceb254",
            "default_route_table_id": "rtb-0a9d7724d28dfabb4",
            "default_security_group_id": "sg-097c7ad5853033592",
            "dhcp_options_id": "dopt-07f08856e16649025",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0497b2d494eac96de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9d7724d28dfabb4",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-vpc"
            },
            "tags_all": {
              "Name": "mukesh-vpc"
            }
          }
        }
      ]
    }
  ]
}